<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">食健：健康飲食管理</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_newfood_input">newfood_input</string>
    <string name="title_activity_icebox">icebox</string>

    <string-array name="iceplace">
        <item>冷凍</item>
        <item>冷藏</item>
        <item>常溫</item>
    </string-array>


    <string-array name="gender">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string-array name="unit">
        <item>公克</item>
        <item>公斤</item>
        <item>台斤</item>
    </string-array>

    <string-array name="unit2">
        <item>毫升</item>
        <item>公升</item>
    </string-array>

    <string-array name="habit">
        <item>葷食</item>
        <item>全素</item>
        <item>蛋素</item>
        <item>奶素</item>
        <item>蛋奶素</item>
    </string-array>
    <string-array name="type">
        <item>全部</item>
        <item>五穀根莖類</item>
        <item>蛋豆魚肉類</item>
        <item>蔬菜類</item>
        <item>水果類</item>
        <item>奶類</item>
        <item>油脂類</item>
    </string-array>

    <string-array name="type2">
        <item>五穀根莖類</item>
        <item>奶類</item>
        <item>水果類</item>
        <item>油脂類</item>
        <item>蔬菜類</item>
        <item>蛋豆魚肉類</item>
    </string-array>

    <string-array name="sporttype">
        <item>休閒運動</item>
        <item>健康運動</item>
        <item>球類運動</item>
    </string-array>

    <string name="title_activity_newfood_camara">newfood_camara</string>
    <string name="title_activity_newfood_freezer">newfood_freezer</string>
    <string name="title_activity_newfood_fidge">newfood_fidge</string>
    <string name="title_activity_newfood_normal">newfood_normal</string>
    <string name="title_activity_icebox_normal">icebox_normal</string>
    <string name="title_activity_newfood_fridge">newfood_fridge</string>
    <string name="title_activity_newfood_freeze">newfood_freeze</string>
    <string name="title_activity_icebox_freeze">icebox_freeze</string>
    <string name="title_activity_icebox_fridge">icebox_fridge</string>
    <string name="title_activity_newfood1">iceboxdbcreate</string>
    <string name="title_activity_newfood2">newfood2</string>
    <string name="title_activity_test">icebox_test</string>
    <string name="title_activity_familycreate">familycreate</string>
    <string name="title_activity_family">family</string>
    <string name="title_homepage">homepage</string>
    <string name="test">test</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_menu_bottom">menuBottom</string>
    <string name="title_activity_menu">menu</string>

    <string name="homePage">首頁</string>
    <string name="family">家庭成員資料</string>
    <string name="icebox">食材儲藏室</string>
    <string name="dish">今日菜單</string>
    <string name="sport">運動消耗計算</string>
    <string name="set">關於</string>
    <string name="title_activity_test2">test2</string>
    <string name="title_activity_dish">dish</string>
    <string name="title_activity_newdish">newdish</string>
    <string name="title_activity_set">set</string>
    <string name="title_activity_test3">test3</string>
    <string name="title_activity_scroll_view">scrollView</string>
    <string name="title_activity_sport">sport</string>
    <string name="title_activity_left_fragment">leftFragment</string>
    <string name="title_activity_right_fragment">rightFragment</string>
    <string name="title_activity_family_detail">FamilyDetail</string>
    <string name="title_activity_food_detail">foodDetail</string>
    <string name="title_activity_newsport1">newsport1</string>
    <string name="title_activity_newsport2">newsport2</string>
    <string name="title_activity_dish_member">DishMember</string>
    <string name="title_activity_sport_list">SportList</string>
    <string name="title_activity_sport_record">SportRecord</string>
    <string name="title_activity_sport_detail">SportDetail</string>
    <string name="title_activity_dish_food">DishFood</string>
    <string name="title_activity_dish_detail">DishDetail</string>
    <string name="title_activity_trace_ability">TraceAbility</string>
    <string name="title_activity_splash">splash</string>
    <string name="title_activity_new_tracecode">NewTracecode</string>
    <string name="title_activity_dish_food2">DishFood2</string>
</resources>
